# internal/infrastructure/handler/request/video_request.go
@@ -6,6 +6,7 @@ type ListVideosQueryRequest struct {
 	UserID        uint64 `form:"user_id" example:"1" default:"0"`
 	Status        string `form:"status" binding:"omitempty" example:"PROCESSING"`
 	StatusExclude string `form:"status_exclude" binding:"omitempty" example:"FAILED,FINISHED"`
+	Hash          string `form:"hash" binding:"omitempty" example:"abc123hash456"`
 	Page          int    `form:"page,default=1" example:"1"`
 	Limit         int    `form:"limit,default=10" example:"10"`
 	// Sort by default: status:d,created_at. Use <field_name>:d for descending, and the default order is ascending
